# iam-job-scout

./: .env.example  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  docker-start.sh  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--status-OK-request-id-b6fa224c-2f7c-4de3-a19c-0c11d50c1_1766157372817.txt  Pasted-You-are-building-this-project-inside-Replit-for-develop_1766097081758.txt
db/: __init__.py  database.py  models.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DIAGRAM_GUIDE.md  DOCKER_IP_GUIDE.md  MONITORING.md  MONITORING_QUICKSTART.md  MONITORING_SUMMARY.md  README.md  prometheus-alerts.yml.example  prometheus.yml.example
jobs/: __init__.py  job_service.py
monitoring/: README.md  __init__.py  db_metrics.py  metrics.py  middleware.py
scheduler/: __init__.py  scheduler_service.py
search/: __init__.py  adzuna.py  api_manager.py  deduplication.py  filters.py  google_cse.py  jsearch.py  remoteok.py
templates/: base.html  dashboard.html  job_detail.html  login.html  saved_jobs.html
tests/: test_imports.py
