[project]
name = "iam-job-scout"
version = "1.0.0"
description = "A job board aggregator for IAM, Cybersecurity, and Cloud Security roles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "IAM Job Scout Contributors" }]
keywords = ["job-board", "iam", "cybersecurity", "identity-management", "cloud-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "itsdangerous>=2.1.2",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/iam-job-scout"
Repository = "https://github.com/yourusername/iam-job-scout"
Documentation = "https://github.com/yourusername/iam-job-scout#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
